hphp/hack/test/typecheck/trait_priv_extends1.php.exp
File "trait_priv_extends1.php", line 10, characters 7-7:
This object is of type C (Typing[4110])
File "trait_priv_extends1.php", line 11, characters 7-7:
It is incompatible with this object of type T
because some declarations are incompatible.
Read the following to see why:
File "trait_priv_extends1.php", line 5, characters 25-27:
This is an int
File "trait_priv_extends1.php", line 17, characters 25-30:
It is incompatible with a string
